# BullsAndCows

./: CMakeLists.txt  main.cpp
include/: AI_hard_player.hpp  bulls_cows.hpp  player.hpp
src/: AI_hard_player.cpp  bulls_cows.cpp  player.cpp
